MDEV-32291  memory leak in innodb.insert_into_empty test

- This failure happens due to commit bf3b787e02c51928eef6653f8b3edabda08b378a (MDEV-31835). InnoDB fails to apply buffered insert
operation for transaction_registry during commit operation.
To avoid this, ha_commit_trans() should call extra() with
HA_EXTRA_RESET_STATE to apply bulk buffered insert operation.